<resources>
    <string name="app_name">SpotMe2</string>
    <string name="permissions">Allow Permissions</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="activity_advertising">AdvertisingActivity</string>

    <!-- Strings used for application name and activities -->
    <string name="spot_me">Spot Me</string>
    <string name="spot_me_description">An application to help you find an exercise partner</string>
    <string name="advertising_title">Find An Exercise Partner</string>
    <string name="go_text">Go!</string>
    <string name="advertise">Be a spotter</string>
    <string name="discover">Find a spotter</string>
    <string name="hostTitle">Your workout plan</string>
    <string name="partnerTitle">Partner workout plan</string>
    <string name="text_box_fill">Write something here...</string>
    <string name="start">Start</string>
    <string name="permissions_description">This will start the app and allow permissions</string>
</resources>