<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/advertisePlan3"
        android:layout_width="329dp"
        android:layout_height="132dp"
        android:layout_marginTop="15dp"
        android:text="@string/advertising_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hostTitle" />

    <TextView
        android:id="@+id/partnerTitle"
        android:layout_width="188dp"
        android:layout_height="25dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="122dp"
        android:text="@string/partnerTitle"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advertisePlan3" />

    <Button
        android:id="@+id/advertiseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/royal_blue"
        android:text="@string/advertise"
        app:iconTint="#D8D7D7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advertiseTitle" />

    <Button
        android:id="@+id/discoverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/royal_blue"
        android:text="@string/discover"
        app:iconTint="#D8D7D7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/advertiseButton"
        app:layout_constraintTop_toBottomOf="@+id/advertiseTitle" />

    <TextView
        android:id="@+id/advertiseTitle"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/advertising_title"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/partnerPlan"
        android:layout_width="329dp"
        android:layout_height="132dp"
        android:layout_marginTop="17dp"
        android:text="@string/advertising_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partnerTitle" />

    <TextView
        android:id="@+id/hostTitle"
        android:layout_width="188dp"
        android:layout_height="25dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="122dp"
        android:text="@string/hostTitle"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/advertiseButton" />

</androidx.constraintlayout.widget.ConstraintLayout>